[chore] webjar 代替本地文件

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -456,7 +456,7 @@
     <script th:src="@{/js/plugins/pace/pace.min.js}"></script>
 
     <!-- jQuery UI -->
-    <script th:src="@{/js/plugins/jquery-ui/jquery-ui.min.js}"></script>
+    <script src="/webjars/jquery-ui/ui/minified/jquery-ui.min.js"></script>
 
     <!-- Jvectormap -->
     <script th:src="@{/js/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js}"></script>
