--- a/src/main/resources/templates/demo/tree_view.html
+++ b/src/main/resources/templates/demo/tree_view.html
@@ -525,7 +525,7 @@
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
 
-<script src="js/plugins/jsTree/jstree.min.js"></script>
+<script src="/webjars/jstree/jstree.min.js"></script>
 
 <style>
     .jstree-open > .jstree-anchor > .fa-folder:before {
