[chore] webjar 代替本地文件

--- a/src/main/resources/templates/demo/form_advanced.html
+++ b/src/main/resources/templates/demo/form_advanced.html
@@ -1829,7 +1829,7 @@
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Chosen -->
     <script src="js/plugins/chosen/chosen.jquery.js"></script>
