--- a/src/main/resources/templates/demo/graph_rickshaw.html
+++ b/src/main/resources/templates/demo/graph_rickshaw.html
@@ -603,7 +603,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Rickshaw -->
     <script src="js/plugins/rickshaw/vendor/d3.v3.js"></script>
