--- a/src/main/resources/templates/demo/vote_list.html
+++ b/src/main/resources/templates/demo/vote_list.html
@@ -762,7 +762,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
