--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -436,7 +436,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script th:src="@{/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
-    <script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Flot -->
     <script th:src="@{/js/plugins/flot/jquery.flot.js}"></script>
