--- a/src/main/resources/templates/demo/diff.html
+++ b/src/main/resources/templates/demo/diff.html
@@ -468,7 +468,7 @@ Ting dummy text of the printing and has been the industry's typesetting. Lorem I
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
