--- a/src/main/resources/templates/demo/graph_chartist.html
+++ b/src/main/resources/templates/demo/graph_chartist.html
@@ -466,7 +466,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Chartist -->
     <script src="js/plugins/chartist/chartist.min.js"></script>
