--- a/src/main/resources/templates/demo/grid_options.html
+++ b/src/main/resources/templates/demo/grid_options.html
@@ -838,7 +838,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
 
     <!-- Peity -->
     <script src="js/plugins/peity/jquery.peity.min.js"></script>
