[chore] webjar 代替本地文件

--- a/src/main/resources/templates/demo/table_foo_table.html
+++ b/src/main/resources/templates/demo/table_foo_table.html
@@ -901,7 +901,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js"></script>
 
     <!-- FooTable -->
     <script src="js/plugins/footable/footable.all.min.js"></script>
