--- a/src/main/resources/templates/news/newsManage.html
+++ b/src/main/resources/templates/news/newsManage.html
@@ -160,7 +160,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script th:src="@{/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
-    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js"></script>
 	
     <!-- Peity -->
     <script th:src="@{/js/plugins/peity/jquery.peity.min.js}"></script>
