--- a/src/main/resources/templates/demo/ecommerce-orders.html
+++ b/src/main/resources/templates/demo/ecommerce-orders.html
@@ -1412,7 +1412,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js"></script>
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
