--- a/src/main/resources/templates/demo/graph_morris.html
+++ b/src/main/resources/templates/demo/graph_morris.html
@@ -545,7 +545,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js"></script>
 
     <!-- Morris -->
     <script src="js/plugins/morris/raphael-2.1.0.min.js"></script>
