--- a/src/main/resources/templates/demo/table_data_tables.html
+++ b/src/main/resources/templates/demo/table_data_tables.html
@@ -1326,7 +1326,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
+    <script src="/webjars/jQuery-slimScroll/jquery.slimscroll.min.js"></script>
     <script src="js/plugins/jeditable/jquery.jeditable.js"></script>
 
     <!-- Data Tables -->
