[chore] webjar 代替本地文件

--- a/src/main/resources/templates/demo/jq_grid.html
+++ b/src/main/resources/templates/demo/jq_grid.html
@@ -10,10 +10,10 @@
 
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/css/font-awesome.min.css"/>
-    <link href="css/animate.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/animate.css" >
     <link href="css/plugins/jQueryUI/jquery-ui-1.10.4.custom.min.css" rel="stylesheet">
-    <link href="css/plugins/jqGrid/ui.jqgrid.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/webjars/jqgrid/css/ui.jqgrid.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css" >
 
     <style>
         /* Additional style to fix warning dialog position */
@@ -441,8 +441,8 @@
     <script src="js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- jqGrid -->
-    <script src="js/plugins/jqGrid/i18n/grid.locale-en.js"></script>
-    <script src="js/plugins/jqGrid/jquery.jqGrid.min.js"></script>
+    <script src="/webjars/jqgrid/js/i18n/grid.locale-en.js"></script>
+    <script src="/webjars/jqgrid/js/jquery.jqGrid.js"></script>
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
