--- a/src/main/resources/templates/demo/tree_view.html
+++ b/src/main/resources/templates/demo/tree_view.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/css/font-awesome.min.css"/>
 
-    <link href="css/plugins/jsTree/style.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/webjars/jstree/themes/default/style.min.css"/>
 
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
