[chore] webjar 代替本地文件

--- a/src/main/resources/templates/demo/basic_gallery.html
+++ b/src/main/resources/templates/demo/basic_gallery.html
@@ -508,7 +508,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- blueimp gallery -->
     <script src="js/plugins/blueimp/jquery.blueimp-gallery.min.js"></script>
