--- a/src/main/resources/templates/demo/calendar.html
+++ b/src/main/resources/templates/demo/calendar.html
@@ -479,7 +479,7 @@
 
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
-<script src="js/plugins/pace/pace.min.js"></script>
+<script src="/webjars/pace/pace.min.js"></script>
 
 <!-- jQuery UI custom -->
 <script src="js/jquery-ui.custom.min.js"></script>
