--- a/src/main/resources/templates/demo/diff.html
+++ b/src/main/resources/templates/demo/diff.html
@@ -472,7 +472,7 @@ Ting dummy text of the printing and has been the industry's typesetting. Lorem I
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Diff march patch -->
     <script src="js/plugins/diff_match_patch/javascript/diff_match_patch.js"></script>
