--- a/src/main/resources/templates/demo/ecommerce-orders.html
+++ b/src/main/resources/templates/demo/ecommerce-orders.html
@@ -1416,7 +1416,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Data picker -->
     <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
