--- a/src/main/resources/templates/demo/ecommerce_product.html
+++ b/src/main/resources/templates/demo/ecommerce_product.html
@@ -869,7 +869,7 @@
 
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
-<script src="js/plugins/pace/pace.min.js"></script>
+<script src="/webjars/pace/pace.min.js"></script>
 
 <!-- SUMMERNOTE -->
 <script src="js/plugins/summernote/summernote.min.js"></script>
