--- a/src/main/resources/templates/demo/ecommerce_product_detail.html
+++ b/src/main/resources/templates/demo/ecommerce_product_detail.html
@@ -594,7 +594,7 @@
 
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
-<script src="js/plugins/pace/pace.min.js"></script>
+<script src="/webjars/pace/pace.min.js"></script>
 
 <!-- slick carousel-->
 <script src="js/plugins/slick/slick.min.js"></script>
