--- a/src/main/resources/templates/demo/form_wizard.html
+++ b/src/main/resources/templates/demo/form_wizard.html
@@ -587,7 +587,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Steps -->
     <script src="js/plugins/staps/jquery.steps.min.js"></script>
