--- a/src/main/resources/templates/demo/idle_timer.html
+++ b/src/main/resources/templates/demo/idle_timer.html
@@ -460,7 +460,7 @@ $(function() {
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Idle Timer plugin -->
     <script src="js/plugins/idle-timer/idle-timer.min.js"></script>
