--- a/src/main/resources/templates/demo/masonry.html
+++ b/src/main/resources/templates/demo/masonry.html
@@ -557,7 +557,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <script src="js/plugins/masonary/masonry.pkgd.min.js"></script>
 
