--- a/src/main/resources/templates/demo/sweetalert.html
+++ b/src/main/resources/templates/demo/sweetalert.html
@@ -475,7 +475,7 @@ $('.demo3').click(function () {
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Sweet alert -->
     <script src="js/plugins/sweetalert/sweetalert.min.js"></script>
