--- a/src/main/resources/templates/demo/table_basic.html
+++ b/src/main/resources/templates/demo/table_basic.html
@@ -739,7 +739,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- iCheck -->
     <script src="js/plugins/iCheck/icheck.min.js"></script>
