--- a/src/main/resources/templates/demo/toastr_notifications.html
+++ b/src/main/resources/templates/demo/toastr_notifications.html
@@ -600,7 +600,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Toastr script -->
     <script src="js/plugins/toastr/toastr.min.js"></script>
