--- a/src/main/resources/templates/demo/video.html
+++ b/src/main/resources/templates/demo/video.html
@@ -499,7 +499,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
     <script src="js/plugins/video/responsible-video.js"></script>
 </body>
 </html>
