--- a/src/main/resources/templates/news/newsCategoryEdit.html
+++ b/src/main/resources/templates/news/newsCategoryEdit.html
@@ -120,7 +120,7 @@
 	
     <!-- Custom and plugin javascript -->
     <script th:src="@{/js/inspinia.js}"></script>
-    <script th:src="@{/js/plugins/pace/pace.min.js}"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
     
     <!-- Toastr script -->
     <script th:src="@{/js/plugins/toastr/toastr.min.js}"></script>
