--- a/src/main/resources/templates/news/newsManage.html
+++ b/src/main/resources/templates/news/newsManage.html
@@ -167,7 +167,7 @@
 	
     <!-- Custom and plugin javascript -->
     <script th:src="@{/js/inspinia.js}"></script>
-    <script th:src="@{/js/plugins/pace/pace.min.js}"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 	
     <!-- iCheck -->
     <script th:src="@{/js/plugins/iCheck/icheck.min.js}"></script>
