--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -453,7 +453,7 @@
 
     <!-- Custom and plugin javascript -->
     <script th:src="@{/js/inspinia.js}"></script>
-    <script th:src="@{/js/plugins/pace/pace.min.js}"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- jQuery UI -->
     <script src="/webjars/jquery-ui/ui/minified/jquery-ui.min.js"></script>
