--- a/src/main/resources/templates/demo/css_animation.html
+++ b/src/main/resources/templates/demo/css_animation.html
@@ -547,7 +547,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Rickshaw -->
     <script src="js/plugins/rickshaw/vendor/d3.v3.js"></script>
