--- a/src/main/resources/templates/demo/form_file_upload.html
+++ b/src/main/resources/templates/demo/form_file_upload.html
@@ -440,7 +440,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- DROPZONE -->
     <script src="js/plugins/dropzone/dropzone.js"></script>
