--- a/src/main/resources/templates/demo/graph_flot.html
+++ b/src/main/resources/templates/demo/graph_flot.html
@@ -564,7 +564,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Flot demo data -->
     <script src="js/demo/flot-demo.js"></script>
