--- a/src/main/resources/templates/demo/graph_rickshaw.html
+++ b/src/main/resources/templates/demo/graph_rickshaw.html
@@ -611,7 +611,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Rickshaw demo data -->
     <script src="js/demo/rickshaw-demo.js"></script>
