--- a/src/main/resources/templates/demo/graph_sparkline.html
+++ b/src/main/resources/templates/demo/graph_sparkline.html
@@ -573,7 +573,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Sparkline demo data -->
     <script src="js/demo/sparkline-demo.js"></script>
