--- a/src/main/resources/templates/demo/issue_tracker.html
+++ b/src/main/resources/templates/demo/issue_tracker.html
@@ -915,7 +915,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Peity -->
     <script src="js/plugins/peity/jquery.peity.min.js"></script>
