--- a/src/main/resources/templates/demo/jq_grid.html
+++ b/src/main/resources/templates/demo/jq_grid.html
@@ -446,7 +446,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <script src="/webjars/jquery-ui/ui/minified/jquery-ui.min.js"></script>
 
