--- a/src/main/resources/templates/demo/landing.html
+++ b/src/main/resources/templates/demo/landing.html
@@ -635,7 +635,7 @@
 
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
-<script src="js/plugins/pace/pace.min.js"></script>
+<script src="/webjars/pace/pace.min.js"></script>
 <script src="js/plugins/wow/wow.min.js"></script>
 
 
