--- a/src/main/resources/templates/demo/off_canvas_menu.html
+++ b/src/main/resources/templates/demo/off_canvas_menu.html
@@ -455,7 +455,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <script>
         $('body.canvas-menu .sidebar-collapse').slimScroll({
