--- a/src/main/resources/templates/demo/table_foo_table.html
+++ b/src/main/resources/templates/demo/table_foo_table.html
@@ -908,7 +908,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Page-Level Scripts -->
     <script>
