--- a/src/main/resources/templates/demo/tinycon.html
+++ b/src/main/resources/templates/demo/tinycon.html
@@ -466,7 +466,7 @@ Tinycon.setOptions({
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
     <!-- Tinycon -->
     <script src="js/plugins/tinycon/tinycon.min.js"></script>
