--- a/src/main/resources/templates/demo/vote_list.html
+++ b/src/main/resources/templates/demo/vote_list.html
@@ -766,7 +766,7 @@
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/webjars/pace/pace.min.js"></script>
 
 
 </body>
